--- a/MvvmLight1/packages.config
+++ b/MvvmLight1/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.0" targetFramework="net45" />
+  <package id="linq2db" version="1.0.5" targetFramework="net45" />
+  <package id="linq2db.PostgreSQL" version="1.0.6" targetFramework="net45" />
+  <package id="linq2db.t4models" version="1.0.6.3" targetFramework="net45" />
   <package id="MvvmLightLibs" version="4.2.30.0" targetFramework="net45" />
+  <package id="Npgsql" version="2.2.0" targetFramework="net45" />
 </packages>
